<resources>
    <string name="app_name">Ma Montre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- tombol garis tiga -->
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>

    <!--Home-->
    <string name="apps_name">Ma Montre</string>
    <string name="btn_begin">Begin</string>

    <!--Add series-->
    <string name="as_title">Title</string>
    <string name="as_eps">Numbers of Episodes</string>
    <string name="as_syn">Synopsis</string>
    <string name="as_poster">Poster</string>
    <string name="as_btn_upload">Upload</string>
    <string name="as_btn_add">Add</string>

    <!--Add movie-->
    <string name="am_title">Title</string>
    <string name="am_syn">Synopsis</string>
    <string name="am_poster">Poster</string>
    <string name="am_btn_upload">Upload</string>
    <string name="am_btn_add">Add</string>

    <!--Film List-->
    <string name="af_btn_addMovies">Add Movies</string>
    <string name="af_btn_addSeries">Add Series</string>

    <!--Review Page-->
    <string name="rp_title">Judul</string>
    <string name="rp_stat">Status : completed</string>
    <string name="rp_rating">Ratings</string>
    <string name="rp_review">Review</string>
    <string name="rp_btn_saveReview">Save</string>

    <!--View Film-->
    <string name="vf_title">Judul</string>
    <string name="vf_stat">Status : </string>
    <string name="vf_syno">Synopsis</string>
    <string name="vf_btn_review">Review</string>
    <string name="vf_btn_drop">Drop</string>
    <string name="vf_btn_delete">Delete</string>

    <!--ViewFilm Review-->
    <string name="vfr_title">Judul</string>
    <string name="vfr_syno">Synopsis</string>
    <string name="vfr_stat">Status : </string>
    <string name="vfr_rating">Ratings</string>
    <string name="vfr_review">Review</string>
    <string name="vfr_btn_editReview">Edit Review</string>
    <string name="vfr_btn_drop">Drop</string>
    <string name="vfr_btn_delete">Delete</string>

    <!--View Series-->
    <string name="vs_title">Judul</string>
    <string name="vs_eps">Number of Episodes : </string>
    <string name="vs_stat">Status : </string>
    <string name="vs_syno">Synopsis</string>
    <string name="vs_btn_eps">Episodes</string>
    <string name="vs_btn_drop">Drop</string>
    <string name="vs_btn_delete">Delete</string>

    <!--ViewSeries Review-->
    <string name="vsr_title">Judul</string>
    <string name="vsr_episode">Episode</string>
    <string name="vsr_rating">Ratings</string>
    <string name="vsr_review">Review</string>
    <string name="vsr_btn_editReview">Edit Review</string>
    <string name="vsr_btn_delete">Delete</string>

    <!--Review Page-->
    <string name="srp_title">Judul</string>
    <string name="srp_episode">Episode</string>
    <string name="srp_rating">Ratings</string>
    <string name="srp_review">Review</string>
    <string name="srp_btn_saveReview">Save</string>
</resources>