<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewFilmReviewedFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/theme">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="30dp">

                <!--Title-->
                <TextView
                    android:id="@+id/vfr_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:text="@string/vfr_title"
                    android:textColor="@color/white"
                    android:textAlignment="center"/>

                <!--Poster-->
                <ImageView
                    android:id="@+id/vfr_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"/>

                <!--Synopsis-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vfr_syno"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/vfr_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

                <!--Status-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vfr_stat"
                    android:textColor="@color/white"/>

                <!--Rating-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vfr_rating"
                    android:textColor="@color/white"/>
                <RatingBar
                    android:id="@+id/vfr_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:stepSize=".5"
                    android:isIndicator="true"/>

                <!--Review-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vfr_review"
                    android:textColor="@color/white"/>
                <TextView
                    android:id="@+id/vfr_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/theme">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/vfr_btn_editReview"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/vfr_btn_delete"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
