<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ReviewPageFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/theme">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="vertical"
                >

                <!--Title-->
                <TextView
                    android:id="@+id/rp_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_title"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textColor="@color/white"/>

                <!--Poster-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="250dp" />

                <!--Status-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_stat"
                    android:textColor="@color/white"/>

                <!--Rating-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_rating"
                    android:textColor="@color/white"/>

                <RatingBar
                    android:id="@+id/rp_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:stepSize=".5" />

                <!--Review-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_review"
                    android:textColor="@color/white"/>

                <EditText
                    android:id="@+id/rp_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:textColor="@color/white"
                    app:backgroundTint = "@color/white"/>
                <Button
                    android:id="@+id/rp_btn_saveReview"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/rp_btn_saveReview"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/rounded_button"/>
            </LinearLayout>



        </ScrollView>



    </RelativeLayout>

</FrameLayout>