<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSeriesFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/theme">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="30dp">

                <!--Title-->
                <TextView
                    android:id="@+id/vs_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vs_title"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30dp"/>

                <!--Poster-->
                <ImageView
                    android:id="@+id/vs_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <!--Episodes-->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vs_eps"
                        android:textColor="@color/white"/>
                    <TextView
                        android:id="@+id/vs_episode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <!--Synopsis-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vs_syno"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/vs_synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@color/theme">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/vs_btn_eps"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/vs_btn_delete"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
